--- a/whiteboard-app/package.json
+++ b/whiteboard-app/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "konva": "^2.4.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-konva": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
