--- a/whiteboard-app/package.json
+++ b/whiteboard-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-konva": "^16.5.2",
     "react-scripts": "2.0.5",
     "socket.io-client": "^2.1.1"
   },
