--- a/whiteboard-app/package.json
+++ b/whiteboard-app/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
+    "react-serialize": "^0.2.0",
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
