Small naming tweak

--- a/whiteboard-app/public/manifest.json
+++ b/whiteboard-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Whiteboard",
-  "name": "Whiteboard App",
+  "short_name": "Brainstorm",
+  "name": "Brainstorming 🌩",
   "icons": [
     {
       "src": "favicon.ico",
