--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
-    "express": "^4.15.2",
-    "socket.io": "^2.1.1"
+    "express": "^4.16.4",
+    "mongoose": "^5.3.4",
+    "rethinkdb": "^2.3.3",
+    "rethinkdbdash": "^2.3.31",
+    "socket.io": "2.1.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
